# rally-tracks

./: Makefile  README.md  pyproject.toml  pytest.ini  setup.cfg  tox.ini
.ci/: build.sh  skip_challenges.json
.ci/jobs/: defaults.yml  periodic-it-autogenerated.yml  periodic-it-manual.yml  periodic-it.yml  periodic-precommit.yml  periodic.yml  pull-request-it-autogenerated.yml  pull-request-it-manual.yml  pull-request-it.yml  pull-request-precommit.yml  push-it-autogenerated.yml  push-it-manual.yml  push-it.yml  push-precommit.yml  push.yml
.ci/templates/: it.yml  periodic.yml  precommit.yml  pull-request-it.yml  push.yml
.github/workflows/: tracks.yml
elastic/endpoint/: track.py
elastic/logs/: track.json  track.py
elastic/logs/tasks/: index-setup.json
elastic/logs/templates/composable/: logs-k8-application.log.json
elastic/shared/parameter_sources/: __init__.py  templates.py
elastic/shared/runners/: update_custom_templates.py
elastic/shared/track_processors/: assets_loader.py
elastic/tests/track_processors/: assets_loader_test.py  data_generator_test.py
geonames/operations/: default.json
http_logs/: test-params.json
http_logs/operations/: default.json
it/: test_all_tracks_and_challenges.py  test_logs.py  test_logs_new.py  track_repository_test.py
it/compatibility/: __init__.py  conftest.py  track_compatibility_test.py  track_repository_test.py
it/compatibility/resources/: rally-tracks-compatibility.ini
pmc/challenges/: debug.json
pmc/operations/: default.json
