[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[project]
name = "rally-tracks"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.8"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.ci",
]

[tool.hatch.envs.default]
dependencies = [
    "esrally[develop] @ git+https://github.com/elastic/rally.git@master",
]

[tool.hatch.envs.unit]
extra-dependencies = [
    "geneve==0.0.3"
]

[tool.hatch.envs.unit.scripts]
test = "pytest"

[tool.hatch.envs.it]
extra-dependencies = [
    "pytest-rally @ git+https://github.com/elastic/pytest-rally.git@main",
]

[tool.hatch.envs.it.scripts]
test = "pytest it"

[tool.pytest.ini_options]
# set to true for more verbose output of tests
log_cli = false
log_level = "INFO"
addopts = "--verbose --color=yes --ignore=it"
junit_family = "xunit2"
junit_logging = "all"
asyncio_mode = "strict"